--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,3 @@
 DB_URL = "postgresql://postgres.rlnssruzjlmbjvvcmceg:Lynxtracker2026@aws-1-us-east-1.pooler.supabase.com:6543/postgres"
+SUPABASE_URL = "https://rlnssruzjlmbjvvcmceg.supabase.co"
+SUPABASE_KEY = "sb_secret_PIYXZqBELEQmaRlz9ww5uw_nOSUBGBq"
